Fix icons not showing when building

--- a/src/app/components/authentication/login/login.component.scss
+++ b/src/app/components/authentication/login/login.component.scss
@@ -38,10 +38,10 @@ $sidebar-logo-width: 150px;
 
 				background-repeat: no-repeat;
 				background-size: cover;
-				background-image: url("~/assets/images/icon.png");
+				background-image: url("assets/images/icon.png");
 
 				&.osu-logo {
-					background-image: url("~/assets/images/osulogo.png");
+					background-image: url("assets/images/osulogo.png");
 				}
 			}
 
@@ -107,7 +107,7 @@ $sidebar-logo-width: 150px;
 					background-repeat: no-repeat;
 					background-size: cover;
 
-					background-image: url("~/assets/images/osulogo.png");
+					background-image: url("assets/images/osulogo.png");
 				}
 			}
 
